# mmCoreAndDevices

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
.github/workflows/: ci.yml
subprojects/DeviceAdapters/: genbuild.py  meson.build
subprojects/MMAcqEng/: main.cpp  meson.build
subprojects/MMCore/: AppleHost.h  MMCore.cpp  meson.build
subprojects/MMCore/unittest/: CoreSanity-Tests.cpp
subprojects/MMDevice/: Property.cpp
